Fixed issue on mobile where the grid contents spilled out of the container.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -142,7 +142,7 @@ a {
 
 .posts-block {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 1fr);
+    grid-template-columns: repeat(auto-fill, 100%);
     grid-gap: 38px;
     justify-content: space-evenly;
 
